[package]
name = "static-wiki"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
structopt = "0.3.21"
serde = { version = "1.0.120", features = ["derive"] }
serde_yaml = "0.8.15"
fs_extra = "1.2.0"
lazy_static = "1.4.0"
serde_json = "1.0.61"
urlencoding = "1.1.1"
