[package]
name = "site_generator"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.6.1"
serde = { version = "1.0.123", features = ["derive"] }
lazy_static = "1.4.0"
pulldown-cmark = "0.8.0"
urlencoding = "1.1.1"
serde_yaml = "0.8.17"
toml = "0.5.8"
fs_extra = "1.2.0"
glob = "0.3.0"
derive_more = "0.99.11"
